# ml-safe-pipeline

./: DESIGN.md  README.md  dune-project
examples/: adv_bad_gen_from_adv.ml  adv_bad_train_on_adv.ml  adv_good.ml  dataset_bad_fit_norm_on_test.ml  dataset_bad_train_on_raw.ml  dataset_bad_train_on_test.ml  dataset_good.ml  dune  lifecycle_bad_double_train.ml  lifecycle_bad_untrained_predict.ml  lifecycle_bad_validate_before_train.ml  lifecycle_good.ml  privacy_bad_release.ml  privacy_good.ml  shape_bad.ml  shape_good.ml
src/: adversarial.ml  dataset.ml  dim.ml  dune  layer.ml  model.ml  privacy.ml  shape_safe.ml  tensor.ml
