(executables
 (names
  shape_good
  lifecycle_good
  dataset_good
  adv_good
  privacy_good)
 (libraries shape_safe))

(executables
 (names
  shape_bad
  lifecycle_bad_untrained_predict
  lifecycle_bad_double_train
  lifecycle_bad_validate_before_train
  dataset_bad_train_on_test
  dataset_bad_train_on_raw
  dataset_bad_fit_norm_on_test
  adv_bad_train_on_adv
  adv_bad_gen_from_adv
  privacy_bad_release)
 (libraries shape_safe)
 (enabled_if true))